# frsky_latency_test

Firmware/: CMakeLists.txt  main.c  sbus.c  sbus.h  timer.h
Firmware/STM32F1/: .mxproject  STM32F103.gpdsc  STM32F103.ioc
Firmware/STM32F1/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
Firmware/STM32F1/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
