SET(STM32_CHIP STM32F103C8)
set(EXTRA_FIND_PATH /)
set(CMAKE_BUILD_TYPE Release)
SET(CMAKE_TOOLCHAIN_FILE ~/cmake/stm32/gcc_stm32.cmake)
SET(CMAKE_MODULE_PATH ~/cmake/stm32/)

PROJECT(rx_latency)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/STM32F1
    ${CMAKE_CURRENT_SOURCE_DIR}/STM32F1/Inc
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
)

SET(PROJECT_SOURCES
    main.c
    #TODO: subdir cmakelists?
    ./STM32F1/Src/gpio.c
    ./STM32F1/Src/main.c
    ./STM32F1/Src/stm32f1xx_hal_msp.c
    ./STM32F1/Src/stm32f1xx_it.c
    ./STM32F1/Src/tim.c
 #   ./STM32F1/Src/dma.c
 	./STM32F1/Src/usart.c
    xprintf.c
    sbus.c
)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})
target_link_libraries(${CMAKE_PROJECT_NAME} ${RF24_LIBRARY} ${RF24Network_LIBRARY} ${RF24NetworkCrypt_LIBRARY})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
